Fixed the news images not displaying correctly on mobile
Add flex-direction column to odd news items

--- a/css/style.css
+++ b/css/style.css
@@ -1078,6 +1078,9 @@ footer a {
     .newsItemText {
         width: 100%;
     }
+    .newsItem.odd {
+        flex-direction: column;
+    }
     .newsItem img {
         width: 20rem;
         height: 20rem;
